--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sowmya</groupId>
-	<artifactId>practise</artifactId>
+	<artifactId>practice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<description>		</description>
+	<description>Understanding concepts and practice programs</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 	<dependencies>
 	</dependencies>
